Ollama Visionサポートを追加

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
+# API設定
 # OpenAI API設定
 OPENAI_API_KEY=your_api_key_here
+
+# Ollama設定
+OLLAMA_HOST=http://localhost:11434
+OLLAMA_MODEL=llava
+
+# デフォルトのAPI（'openai'または'ollama'）
+DEFAULT_API=openai
 
 # 画像評価設定
 # 評価スコアの閾値（この値以上のスコアを持つ画像が「良い写真」と判断されます）
