--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,13 @@ OLLAMA_MODEL=llava
 # デフォルトのAPI（'openai'または'ollama'）
 DEFAULT_API=openai
 
+# WebDAV設定
+WEBDAV_URL=https://your-webdav-server.com
+WEBDAV_USERNAME=your_username
+WEBDAV_PASSWORD=your_password
+WEBDAV_ROOT=/
+WEBDAV_VERIFY_SSL=true
+
 # 画像評価設定
 # 評価スコアの閾値（この値以上のスコアを持つ画像が「良い写真」と判断されます）
 QUALITY_THRESHOLD=7.5
